# attention_is_all_you_need

./: .gitignore  LICENSE  README.md  conftest.py  paper_notes.md  pyproject.toml  requirements-translation.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: experiments.py  train_synthetic.py  train_translation.py  train_translation_small.py
tasks/: __init__.py  synthetic.py
tests/: test_attention.py  test_data.py  test_masking.py  test_model.py  test_overfit.py  test_positional.py
transformer/: __init__.py  attention.py  config.py  decoder.py  encoder.py  feed_forward.py  loss.py  masking.py  model.py  positional.py  schedule.py
