[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "A from-scratch PyTorch reimplementation of 'Attention Is All You Need' (Vaswani et al., 2017)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Heojun Hur" }]
dependencies = [
    "torch>=2.4",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
translation = ["datasets>=2.18", "sacrebleu>=2.4"]

[tool.setuptools]
packages = ["transformer", "tasks"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E741",  # ambiguous variable names (e.g. l) are fine in math-heavy code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
